--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-snackbar": "^2.6.2",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
