--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.5.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.13.2",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
